--- a/Website/style.css
+++ b/Website/style.css
@@ -10,7 +10,7 @@ body {
 .banner {
     background-image: url("w_s_w_c_c_l_1.png");
     width: 100%;
-    height: 80vh;
+    height: 99vh;
     background-size: cover;
     background-position: center 80px;
     background-repeat: no-repeat;
@@ -81,8 +81,16 @@ li a:hover:not(.active) {
 .page_alt {
     height: 650px;
     width: 100%;
+    background-color: rgb(169, 189, 255);
+    overflow: auto;
+}
+.page_alt2 {
+    width: 100%;
     background-color: white;
     overflow: auto;
+    font-family: verdana;
+    font-size: 25px;
+    text-align: center;
 }
 .page_login {
     height: 550px;
@@ -163,4 +171,32 @@ li a:hover:not(.active) {
     left: 50%;
     -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
+}
+.button3 {
+    background-color: dodgerblue;
+    border: none;
+    color: white;
+    text-align: center;
+    text-decoration: underline;
+    font-size: 25px;
+    font-family: Tahoma, sans-serif;
+    cursor: pointer;
+    width: 20px;
+    height: 20px;
+}
+.redirect-button {
+display: inline-block;
+background-color: rgba(30, 144, 255, 0.7);
+color: #d6e4ff;
+padding: 15px 25px;
+font-size: 30px;
+text-align: center;
+text-decoration: none;
+cursor: pointer;
+border: none;
+border-radius: 5px;
+position: relative;
+top: 30px;
+margin-top: 30px;
+margin-left: 1in;
 }
